--- a/MonopolyTest/MonopolyTest.csproj
+++ b/MonopolyTest/MonopolyTest.csproj
@@ -50,6 +50,7 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BezittingenTest.cs" />
     <Compile Include="GooiDobbelstenenTest.cs" />
     <Compile Include="HypotheekTest.cs" />
     <Compile Include="MonopolyspelTest.cs" />
